# vista-dataset

./: .gitignore  README.md  STATEMENT.md  croissant.json  dataset.json  minecraft_dataset.json  prepare_minecraft_dataset_from_pairs.py  pyproject.toml  run_gpt_batch.sh  run_nn_batch.sh
configs/: alfred.yaml  alfred_replication.yaml  default.yaml  experiment.yaml  habitat.yaml  minecraft.yaml  minecraft_clip.yaml  minecraft_gpt.yaml  minecraft_gpt4.yaml  minecraft_multistep.yaml  minecraft_multistep_gpt.yaml  opening.yaml  real_life.yaml  real_life_6_12_1452.yaml  real_life_6_12_2341.yaml  real_life_6_13_0146.yaml  real_life_6_13_0230.yaml  real_life_6_4_1016.yaml  real_life_6_4_1125.yaml  real_life_6_4_1304.yaml  real_life_6_4_1549.yaml  real_life_6_4_1654.yaml  real_life_6_4_1722.yaml  real_life_6_4_1828.yaml  real_life_6_4_1904.yaml  real_life_6_4_2030.yaml  real_life_6_4_2157.yaml  real_life_6_4_2219.yaml  real_life_6_5_2103.yaml  real_life_6_5_2139.yaml  real_life_6_5_2141.yaml  real_life_6_5_2301.yaml  real_life_6_5_2304.yaml  real_life_6_6_0205.yaml  real_life_6_6_0257.yaml  real_life_6_6_0310.yaml  real_life_6_6_0416.yaml  real_life_6_6_0419.yaml  real_life_6_6_1117.yaml  real_life_mini.yaml
data/: metadata.csv
data/tasks/alfred/foundation/clean/: apple.yaml  apple_data.json  cloth.yaml  cloth_data.json  egg.yaml  egg_data.json  fork.yaml  fork_data.json  kettle.yaml  kettle_data.json
data/tasks/alfred/foundation/containers/: place_butter_knife.yaml  place_butter_knife_data.json  place_key_chain.yaml  place_key_chain_data.json  place_mug.yaml  place_mug_data.json  place_soap_bar.yaml  place_soap_bar_data.json
data/tasks/alfred/foundation/cool/: egg.yaml  egg_data.json  lettuce.yaml  lettuce_data.json  slice_of_bread.yaml  slice_of_bread_data.json  slice_of_tomato.yaml  slice_of_tomato_data.json  tomato.yaml  tomato_data.json
data/tasks/alfred/foundation/heat/: apple.yaml  apple_data.json  bread.yaml  bread_data.json  mug.yaml  mug_data.json  potato.yaml  potato_data.json  slice_of_potato.yaml  slice_of_potato_data.json
data/tasks/alfred/foundation/objects/: pick_from_counter_top.yaml  pick_from_counter_top_data.json  pick_from_dining_table.yaml  pick_from_dining_table_data.json  pick_from_somewhere.yaml  pick_from_somewhere_data.json
data/tasks/alfred/foundation/on_v_off/: desk_lamp.yaml  faucet.yaml  (+6 more)
data/tasks/minecraft/foundation/: multilabel.yaml  multilabel_data.json
data/tasks/real_life/: _check_remixes_permutations_match_txt_source.py  _gen_all_remix_or_permutation_from_template.py  _get_permutations.py  _get_remixes.py  _perm_vid_paths.txt  _permutation_and_remix_template.yaml  _permutation_vid_paths.txt  _permutations.txt  _permutations_original.txt  _remix_vid_paths.txt  _remixes.txt  _remixes_original.txt  _scramble_vid_paths.txt  _utils.py  datasheet.json  gen_from_template.sh  validate_paths.py
evaluation/: .gitignore  README.md  pyproject.toml
evaluation/configs/: habitat.yaml  minecraft_replication.yaml  real_life.yaml  real_life_mini.yaml  real_life_temp.yaml
evaluation/minecraft_src/: main.py
evaluation/minecraft_src/vlm/: config.py  plots.py
evaluation/minecraft_src/vlm/contrib/viclip/: viclip_vision.py
evaluation/src/: build_dataset.py  convert.py  log_viewer.py  main.py
evaluation/src/vlm/: config.py  encoders.py  heads.py  models.py  plots.py  utils.py
evaluation/src/vlm/contrib/viclip/: simple_tokenizer.py
src/: log_viewer.py  main.py
src/vlm/: config.py  datamodel.py  encoders.py  experiment.py  heads.py  models.py  objects.py  plots.py  utils.py
src/vlm/contrib/viclip/: viclip.py
tasks/habitat/: open_cabinet.yaml  open_cabinet_data.json  recognize_room.yaml
virtual-home-generation/: README.md  notebook.py  pyproject.toml
virtual-home-generation/src/alfred/: task.py
(+939 files in other folders)
