[project]
dependencies = [
    "backoff",
    "einops",
    "openai",
    "open_clip_torch",
    "opencv-python",
    "human-id",
    "polars",
    "pyarrow",
    "plotly",
    "kaleido",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "torch",
    "torchvision",
    "typer",
]
name = "vlm-benchmark"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vlm = "main:app"
