[project]
dependencies = [
    "av",
    "backoff",
    "einops",
    "human-id",
    "kaleido",
    "matplotlib",
    "open_clip_torch",
    "openai",
    "opencv-python",
    "pandas",
    "plotly",
    "jsonlines",
    "polars",
    "pyarrow",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "torch",
    "torchvision",
    "typer",
]
name = "vlm-benchmark"
version = "0.0.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vlm = "main:app"
